--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div>Hello world</div>
-    <script src="bundle.js"></script>
+    <script src="../pixi/pixi.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
