--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,10 +1,41 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Fazi Casino</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div>Hello world</div>
-    <script src="../pixi/pixi.js"></script>
+    <div class="body-container">
+      <section class="vertical-menu">
+        <input type="text" placeholder="search" />
+        <input type="radio" name="filter" value="all" />
+        <input type="radio" name="filter" value="elite roller" />
+        <input type="radio" name="filter" value="high stakes" />
+        <input type="radio" name="filter" value="medium size" />
+        <input type="radio" name="filter" value="small" />
+        <select name="language" id="language">
+          <option value="english">English</option>
+          <option value="serbian">Serbian</option>
+        </select>
+      </section>
+      <main class="main-container">
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+        <div class="card">asdfasdfasd</div>
+      </main>
+    </div>
+
+    <script src="./pixi/pixi.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
