city page and minor refactor

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="body-container">
       <section class="vertical-menu">
+        <a href="city.html">City</a>
         <input class="search" type="text" placeholder="search" />
         <input id="all" type="radio" name="filter" value="all" />
         <label for="all">All</label>
