casino page and minor updates

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -41,7 +41,7 @@
       </main>
     </div>
 
-    <script src="./pixi/pixi.js"></script>
+    <script src="pixi.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
