added PIXI code to casino page

--- a/frontend/src/city.html
+++ b/frontend/src/city.html
@@ -9,6 +9,7 @@
   <body>
     <main class="main-container">
       <a href="index.html">Index</a>
+      <a href="casino.html">Casino</a>
       <div class="sidebar"></div>
       <img class="banner" src="" alt="" />
       <div class="city-description"></div>
