--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,7 @@
     <div class="body-container">
       <section class="vertical-menu">
         <a href="city.html">City</a>
+        <a href="casino.html">Casino</a>
         <input class="search" type="text" placeholder="search" />
         <input id="all" type="radio" name="filter" value="all" />
         <label for="all">All</label>
