--- a/frontend/src/casino.html
+++ b/frontend/src/casino.html
@@ -7,27 +7,32 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="sidebar">
-      <a href="city.html">City</a>
-      <input class="search" type="text" placeholder="search" />
-      <input id="all" type="radio" name="filter" value="all" />
-      <label for="all">All</label>
-      <input id="elite" type="radio" name="filter" value="elite roller" />
-      <label for="elite">Elite Roller</label>
-      <input id="high" type="radio" name="filter" value="high stakes" />
-      <label for="high">High Stakes</label>
-      <input id="medium" type="radio" name="filter" value="medium size" />
-      <label for="medium">Medium Size</label>
-      <input id="small" type="radio" name="filter" value="small" />
-      <label for="small">Small</label>
-      <select class="language" name="language" id="language">
-        <option value="english">English</option>
-        <option value="serbian">Serbian</option>
-      </select>
-    </section>
-    <div class="top-bar"></div>
-    <canvas id="canvas"> </canvas>
-    <section class="casino-items"></section>
+    <div class="body-container">
+      <section class="sidebar">
+        <a href="city.html">City</a>
+        <a href="index.html">Index</a>
+        <input class="search" type="text" placeholder="search" />
+        <input id="all" type="radio" name="filter" value="all" />
+        <label for="all">All</label>
+        <input id="elite" type="radio" name="filter" value="elite roller" />
+        <label for="elite">Elite Roller</label>
+        <input id="high" type="radio" name="filter" value="high stakes" />
+        <label for="high">High Stakes</label>
+        <input id="medium" type="radio" name="filter" value="medium size" />
+        <label for="medium">Medium Size</label>
+        <input id="small" type="radio" name="filter" value="small" />
+        <label for="small">Small</label>
+        <select class="language" name="language" id="language">
+          <option value="english">English</option>
+          <option value="serbian">Serbian</option>
+        </select>
+      </section>
+      <main class="main-container">
+        <div class="top-bar"></div>
+        <canvas id="canvas"> </canvas>
+        <section class="casino-items"></section>
+      </main>
+    </div>
     <script src="pixi.js"></script>
     <script src="casino.js"></script>
   </body>
