--- a/frontend/src/city.html
+++ b/frontend/src/city.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<script src="city.js">
+
+</script>
+
+<!DOCTYPE html />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,17 +11,34 @@
     <title>Casino</title>
   </head>
   <body>
-    <main class="main-container">
-      <a href="index.html">Index</a>
-      <a href="casino.html">Casino</a>
-      <div class="sidebar"></div>
-      <img class="banner" src="" alt="" />
-      <div class="city-description"></div>
-      <div class="casinos">
-        <ul class="casino-list"></ul>
-      </div>
-      <div class="casino-description"></div>
-    </main>
-    <script src="city.js"></script>
+    <div class="body-container">
+      <section class="sidebar">
+        <a href="city.html">City</a>
+        <a href="index.html">Index</a>
+        <input class="search" type="text" placeholder="search" />
+        <input id="all" type="radio" name="filter" value="all" />
+        <label for="all">All</label>
+        <input id="elite" type="radio" name="filter" value="elite roller" />
+        <label for="elite">Elite Roller</label>
+        <input id="high" type="radio" name="filter" value="high stakes" />
+        <label for="high">High Stakes</label>
+        <input id="medium" type="radio" name="filter" value="medium size" />
+        <label for="medium">Medium Size</label>
+        <input id="small" type="radio" name="filter" value="small" />
+        <label for="small">Small</label>
+        <select class="language" name="language" id="language">
+          <option value="english">English</option>
+          <option value="serbian">Serbian</option>
+        </select>
+      </section>
+      <main class="main-container">
+        <img class="banner" src="" alt="" />
+        <div class="city-description" />
+        <div class="casinos">
+          <ul class="casino-list" />
+        </div>
+        <div class="casino-description" />
+      </main>
+    </div>
   </body>
 </html>
